Fix width by wrapping everything in <main>

--- a/everything.css
+++ b/everything.css
@@ -19,6 +19,10 @@ a:hover
   background-color: white;
 }
 
+main
+{
+	max-width: 720px;
+}
 
 .collapsible {
   background-color: #4b1b6b;
